# CS453Project

./: README.md  REPORT.md  student.txt
configs/: large.conf  small.conf
experiments/: run_all.sh  run_from_config.sh
mpi_runtime/: CMakeLists.txt
mpi_runtime/include/: graph.h
mpi_runtime/src/: main.c
netgamesim/: README.md
outputs/: MyFirstGraph.ngs.dot  SecondGraph.ngs.dot  graph.json  graph2.json  part.json  part2_contiguous.json  part2_roundrobin.json  part_roundrobin.json
tests/: test_project.py
tools/graph_export/: graph_export.py
tools/partition/: partition.py
